Update Jenkinsfile to be the regular multi branch build pipeline and rename existing one to JenkinsfileDocker for docker image builds